# global_i18n

./: OAT.xml  README.en.md  README.md  bundle.json  hisysevent.yaml  i18n.gni
dfx/hisysevent_adapter/include/: hisysevent_adapter.h
dfx/hisysevent_adapter/src/: hisysevent_adapter.cpp
frameworks/intl/: BUILD.gn  libintl_util.map
frameworks/intl/etc/: language_config.para.dac  white_languages.xml
frameworks/intl/etc/lang/: supported_locales.xml  zh-Hans.xml
frameworks/intl/etc/timezone/: en-Latn.xml  supported_locales.xml  zh-Hans.xml
frameworks/intl/include/: character.h  collator.h  date_time_format.h  i18n_break_iterator.h  i18n_calendar.h  i18n_normalizer.h  i18n_timezone.h  i18n_types.h  index_util.h  locale_compare.h  locale_config.h  locale_info.h  num2timezone.h  number_format.h  phone_number_format.h  plural_rules.h  relative_time_format.h  system_locale_manager.h  taboo.h  taboo_utils.h  utils.h
frameworks/intl/src/: character.cpp  collator.cpp  date_time_format.cpp  i18n_break_iterator.cpp  i18n_calendar.cpp  i18n_normalizer.cpp  i18n_timezone.cpp  index_util.cpp  locale_compare.cpp  locale_config.cpp  locale_info.cpp  measure_data.cpp  number_format.cpp  phone_number_format.cpp  plural_rules.cpp  preferred_language.cpp  relative_time_format.cpp  str_util.cpp  system_locale_manager.cpp  taboo.cpp  taboo_utils.cpp  utils.cpp
frameworks/intl/test/: BUILD.gn
frameworks/intl/test/fuzztest/: BUILD.gn
frameworks/intl/test/fuzztest/breakiterator_fuzzer/: BUILD.gn  breakiterator_fuzzer.cpp  breakiterator_fuzzer.h
frameworks/intl/test/fuzztest/character_fuzzer/: BUILD.gn  character_fuzzer.cpp  character_fuzzer.h
frameworks/intl/test/fuzztest/collator_fuzzer/: BUILD.gn  collator_fuzzer.cpp  collator_fuzzer.h
frameworks/intl/test/fuzztest/localeconfigget_fuzzer/: BUILD.gn  localeconfigget_fuzzer.cpp  localeconfigget_fuzzer.h
frameworks/intl/test/fuzztest/localeinfo_fuzzer/: BUILD.gn  localeinfo_fuzzer.cpp  localeinfo_fuzzer.h
frameworks/intl/test/fuzztest/measuredata_fuzzer/: BUILD.gn  measuredata_fuzzer.cpp  measuredata_fuzzer.h
frameworks/intl/test/fuzztest/numberformat_fuzzer/: BUILD.gn  numberformat_fuzzer.cpp  numberformat_fuzzer.h
frameworks/intl/test/fuzztest/phonenumberformat_fuzzer/: BUILD.gn  phonenumberformat_fuzzer.cpp  phonenumberformat_fuzzer.h
frameworks/intl/test/fuzztest/relativetimeformat_fuzzer/: BUILD.gn  relativetimeformat_fuzzer.cpp  relativetimeformat_fuzzer.h
frameworks/intl/test/fuzztest/strutil_fuzzer/: BUILD.gn  strutil_fuzzer.cpp  strutil_fuzzer.h
frameworks/intl/test/fuzztest/timezone_fuzzer/: BUILD.gn  timezone_fuzzer.cpp  timezone_fuzzer.h
frameworks/intl/test/fuzztest/utils_fuzzer/: BUILD.gn  utils_fuzzer.cpp  utils_fuzzer.h
frameworks/intl/test/fuzztest/utils_fuzzer/corpus/: init
frameworks/intl/test/unittest/: i18n_test.cpp  i18n_test.h  intl_test.cpp  intl_test.h  locale_config_test.cpp  locale_config_test.h
frameworks/zone/: BUILD.gn
frameworks/zone/src/: zone_util.cpp
frameworks/zone/test/: BUILD.gn
frameworks/zone/test/unittest/: zone_util_performance_test.cpp  zone_util_performance_test.h  zone_util_test.cpp  zone_util_test.h
interfaces/js/kits/: BUILD.gn
interfaces/js/kits/include/: i18n_addon.h  intl_addon.h
interfaces/js/kits/src/: error_util.cpp  i18n_addon.cpp  intl_addon.cpp
interfaces/native/inner_api/preferred_language/include/: preferred_language.h
interfaces/native/inner_api/zone/include/: zone_util.h
