# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//base/global/i18n/i18n.gni")
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
module_output_path = "global/i18n"

##############################fuzztest##########################################
ohos_fuzztest("PhoneNumberFormatFuzzTest") {
  module_out_path = module_output_path

  fuzz_config_file = "//base/global/i18n/frameworks/intl/test/fuzztest/phonenumberformat_fuzzer"

  include_dirs = [
    "//base/global/i18n/frameworks/intl/include",
    "//third_party/icu/icu4c/source/common",
    "//third_party/icu/icu4c/source/i18n",
    "//third_party/libphonenumber",
    "//third_party/libphonenumber/cpp/src",
    "//third_party/protobuf/src",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "phonenumberformat_fuzzer.cpp" ]
  configs = []

  deps = [
    "//base/global/i18n/frameworks/intl:intl_util",
    "//third_party/icu/icu4c:shared_icui18n",
    "//third_party/icu/icu4c:shared_icuuc",
  ]

  subsystem_name = "global"
  part_name = "i18n"
}
